Mention GitHub Clean up some HTML

--- a/pages/index.html
+++ b/pages/index.html
@@ -5,6 +5,9 @@
     I live in <strike>Stockholm</strike> Umeå, where I’m doing a bachelor’s degree in computer science.
     I work with software at <a href="http://spotify.com/">Spotify</a>.
   </p>
+  <p>
+    If you want to change something on this site, complain about something, or make a suggestion, you can <a href="https://github.com/nlogax/home">do so here</a>.
+  </p>
 </section>
 
 <section>
