Update index page

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,16 +1,4 @@
 <section>
-  <h1>Hello, world wide web</h1>
-  <p>
-    My name is Jonas, and I keep deluding myself that I will write about interesting things here. Just not right now.
-    I live in <strike>Stockholm</strike> Umeå, where I’m doing a bachelor’s degree in computer science.
-    I work with software at <a href="http://spotify.com/">Spotify</a>.
-  </p>
-  <p>
-    If you want to change something on this site, complain about something, or make a suggestion, you can <a href="https://github.com/nlogax/home">do so here</a>.
-  </p>
-</section>
-
-<section>
   <h1>Latest posts</h1>
   <ul class="posts">
     $posts$
@@ -21,11 +9,17 @@
 </section>
 
 <section>
-  <h1>Elsewhere</h1>
+  <h1>About this strand of web</h1>
   <p>
-    I am on <a href="https://twitter.com/ultror">Twitter</a>,
-    <a href="https://www.facebook.com/profile.php?id=100000868614235">Facebook</a>,
-    <a href="https://github.com/nlogax">GitHub</a>
-    and <a href="http://se.linkedin.com/pub/jonas-westerlund/2/236/157">LinkedIn</a>.
+    My name is Jonas, and I keep deluding myself that I will write about interesting things here. Just not right now.
+    I live in <strike>Stockholm</strike> Umeå, where I’m doing a bachelor’s degree in computer science.
+    Under normal circumstances, I work with software at <a href="http://spotify.com/">Spotify</a>.
+  </p>
+  <p>
+    If you want to change something on this site, complain about something, or make a suggestion, you can <a href="https://github.com/nlogax/home">do so here</a>.
+  </p>
+  <p>
+    Complaints/greetings/other are also accepted on <a href="https://twitter.com/ultror">Twitter</a>
+    and <a href="https://www.facebook.com/profile.php?id=100000868614235">Facebook</a>.
   </p>
 </section>
