Remove old flexbox, add RSS link

--- a/pages/index.html
+++ b/pages/index.html
@@ -9,17 +9,17 @@
 </section>
 
 <section>
-  <h1>About this strand of web</h1>
+  <h1>About the author</h1>
   <p>
-    My name is Jonas, and I keep deluding myself that I will write about interesting things here. Just not right now.
+    My name is Jonas, and this is where I occasionally write about things, mostly programming.
     I live in <strike>Stockholm</strike> Umeå, where I’m doing a bachelor’s degree in computer science.
     Under normal circumstances, I work with software at <a href="http://spotify.com/">Spotify</a>.
   </p>
   <p>
-    If you want to change something on this site, complain about something, or make a suggestion, you can <a href="https://github.com/nlogax/home">do so here</a>.
+    If you want to change something on this site, report an issue, or make a suggestion, you can <a href="https://github.com/nlogax/home">do so here</a>.
   </p>
   <p>
-    Complaints/greetings/other are also accepted on <a href="https://twitter.com/ultror">Twitter</a>
+    You can get in touch with me on <a href="https://twitter.com/ultror">Twitter</a>
     and <a href="https://www.facebook.com/profile.php?id=100000868614235">Facebook</a>.
   </p>
 </section>
