Update HTML templates

--- a/pages/index.html
+++ b/pages/index.html
@@ -9,7 +9,7 @@
 </section>
 
 <section>
-  <h1>About the author</h1>
+  <h1>About</h1>
   <p>
     My name is Jonas, and this is where I occasionally write about things, mostly programming.
     I live in <strike>Stockholm</strike> Umeå, where I’m doing a bachelor’s degree in computer science.
