Remove unicode stuff
Update CSS

Update index page

--- a/pages/index.html
+++ b/pages/index.html
@@ -9,14 +9,11 @@
 </section>
 
 <section>
-  <h1>About</h1>
+  <h1>About me</h1>
   <p>
-    My name is Jonas, and this is where I occasionally write about things, mostly programming.
-    I live in <strike>Stockholm</strike> Umeå, where I’m doing a bachelor’s degree in computer science.
-    Under normal circumstances, I work with software at <a href="http://spotify.com/">Spotify</a>.
-  </p>
-  <p>
-    If you want to change something on this site, report an issue, or make a suggestion, you can <a href="https://github.com/nlogax/home">do so here</a>.
+    My name is Jonas, and this is where I occasionally write about things that interest me.
+    I live in <strike>Stockholm</strike> Umeå, where I’m studying computer science.
+    When not studying, I work with software at <a href="http://spotify.com/">Spotify</a>.
   </p>
   <p>
     You can get in touch with me on <a href="https://twitter.com/ultror">Twitter</a>
