--- a/pages/index.html
+++ b/pages/index.html
@@ -12,10 +12,7 @@
   <h1>About me</h1>
   <p>
     My name is Jonas, and this is where I occasionally write about things that interest me.
-    I live in <strike>Stockholm</strike> Umeå, where I’m studying computer science.
-    When not studying, I work with software at <a href="http://spotify.com/">Spotify</a>.
-  </p>
-  <p>
+    I work with software at <a href="http://spotify.com/">Spotify</a>, and study computer science at <a href="http://www.umu.se">Umeå University</a>.
     You can get in touch with me on <a href="https://twitter.com/ultror">Twitter</a>
     and <a href="https://www.facebook.com/profile.php?id=100000868614235">Facebook</a>.
   </p>
