--- a/pages/index.html
+++ b/pages/index.html
@@ -1,5 +1,5 @@
 <section>
-  <h1>Latest posts</h1>
+  <h2>Latest posts</h2>
   <ul class="posts">
     $posts$
   </ul>
@@ -9,11 +9,13 @@
 </section>
 
 <section>
-  <h1>About me</h1>
-  <p>
-    My name is Jonas, and this is where I occasionally write about things that interest me.
-    I work with software at <a href="http://spotify.com/">Spotify</a>, and study computer science at <a href="http://www.umu.se">Umeå University</a>.
-    You can get in touch with me on <a href="https://twitter.com/ultror">Twitter</a>
-    and <a href="https://www.facebook.com/profile.php?id=100000868614235">Facebook</a>.
-  </p>
+  <h2>About me</h2>
+  <article>
+    <p>
+      My name is Jonas, and this is where I occasionally write about things that interest me.
+      I work with software at <a href="http://spotify.com/">Spotify</a>, and study computer science at <a href="http://www.umu.se">Umeå University</a>.
+      You can get in touch with me on <a href="https://twitter.com/ultror">Twitter</a>
+      and <a href="https://www.facebook.com/profile.php?id=100000868614235">Facebook</a>.
+    </p>
+  </article>
 </section>
