--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
     $posts$
   </ul>
   <p class="all">
-    <a href="/posts.html">All posts</a>
+    <a href="/posts.html">Archive</a>
   </p>
 </section>
 
