--- a/pages/index.html
+++ b/pages/index.html
@@ -12,7 +12,7 @@
   <h2>About me</h2>
   <p>
     My name is Jonas, and this is where I occasionally write about things that interest me.
-    I work with software at <a href="http://spotify.com/">Spotify</a>, and study computer science at <a href="http://www.umu.se">Umeå University</a>.
+    I work with software at <a href="https://www.spotify.com/">Spotify</a> and recently left Sweden to do iOS development in our San Francisco office.
     You can get in touch with me on <a href="https://twitter.com/ultror">Twitter</a>
     and <a href="https://www.facebook.com/profile.php?id=100000868614235">Facebook</a>.
   </p>
